--- a/index.html
+++ b/index.html
@@ -2,29 +2,56 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="stylesheet.css">
-    <title>Document</title>
+    <title>Home | COMP1002 HTML, CSS, and JS Fundamentals</title>
+    <meta name="author" content="Your Name">
+    <meta name="description" content="A concise and accurate summary of the document content is to appear here">
+    <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon" />
+    <link rel="stylesheet" href="css/stylesheet.css" />
 </head>
 <body>
     <header>
-        <h1>My website for html lab 1</h1>
+        <h1>HTML, CSS, and JS Fundamentals</h1>
+        <h2>Building Blocks for Web Developers</h2>
     </header>
     <main>
-        <article>
-            <h1>Today's Chuckle</h1>
-            <img src="toast.png" alt="toast image">
-            <h2>From The Milwaukee Sentinel</h2>
+        <section>
+            <h3>Building Blocks In the News</h3>
 
-        </article>
-        <p>Modern gadgets are wonderful. In the old days we were always
-            having to pry the burned toast out the toaster. Now the 
-            burned toast pops up automatically.
-        </p>
-        <p>Here we see a toast with a html page, we did this for the exercise of lab 1, classes 
-            every week
-        </p>
+            <article>
+                <h4>Latest Research Reveals Building Blocks are Cool</h4>
+                <p>by Blocky Blockhead<br />March 29, 2018</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                 Lorem ipsum dolor sit amet consectetur adipiscing. Platea dictumst vestibulum rhoncus est pellentesque. Read more…</p>
+            </article>
+
+            <article>
+                <h4>Building Blocks Aren’t Just For Kids</h4>   
+                <p>by Rectangle Square<br />June 17, 2017</p>
+                <p>Amet risus nullam eget felis eget nunc lobortis. Eget arcu dictum varius duis at consectetur lorem donec.
+                 Arcu felis bibendum ut tristique et egestas quis. Turpis tincidunt id aliquet risus feugiat in ante metus. Read more…</p>
+            </article>
+
+            <article>
+                <h4>Building Blocks Aren’t Just For Kids</h4>
+                <p>by Right Angle<br />February 15, 2018</p>
+                <p>At imperdiet dui accumsan sit amet nulla facilisi morbi tempus. Arcu cursus euismod quis viverra nibh cras.
+                 Nunc mi ipsum faucibus vitae aliquet nec ullamcorper. Aenean sed adipiscing diam donec adipiscing. Read more…</p>    
+            </article>
+        </section>
+
+        <aside>
+            <h3>Did you know...?</h3>
+            <p>One of the most important components of effective life-long learning is play. Learning a new skill (like Web development) should include a certain amount of play.
+            Renowned children’s programming entertainer Mr. Rogers certainly knew about the value that play represented:</p>
+            <blockquote><a href="https://www.brainyquote.com/quotes/fred_rogers_193081" target="_blank">https://www.brainyquote.com/quotes/fred_rogers_193081</a></blockquote>    
+            <p>Play is often talked about as if it were a relief from serious learning. But for children, play is serious learning. Play is really the work of childhood. –Fred Rogers</p>
+            <p>Take a little time every day to just play with technology – you’ll be surprised how much you learn.</p>
+            <img src="images/mini-figure.png" width="176" height="285" alt="Mini figure">
+        </aside>
     </main>
-    
+
+    <footer>
+        <p><small>© HTML, CSS, and JS Blocks Inc.</small></p>
+    </footer>   
 </body>
 </html>
