--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Home | COMP1002 HTML, CSS, and JS Fundamentals</title>
-    <meta name="author" content="Your Name">
+    <meta name="author" content="Index">
     <meta name="description" content="A concise and accurate summary of the document content is to appear here">
     <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon" />
     <link rel="stylesheet" href="css/stylesheet.css" />
