--- a/services.html
+++ b/services.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Home of 2024 soccer news</title>
+<title>2024 soccer Week news - Services</title>
 <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -18,17 +18,9 @@
     </nav>
 </header>
 <main>
-    <h1>Welcome to our site!</h1>
-    <p>Come to our site, hope you will like this content, here we talk about many things about soccer the entire week, enjoy!.</p>
-    <img src="Soccer.png" alt="Football Image" style="max-width:100%;height:auto;">
-    
+    <h1>Our Services</h1>
+    <p>We give you all the news about what is happening around the world at any place and any time.</p>
 </main>
-<section>
-    <h3>
-        Here you will see the latest news of the world, our focus its on be honest and impartial with all our posts, bringing
-        to all of you a honest content published by us.
-    </h3>
-</section>
 <footer>
     <p>&copy; 2024 soccer Week news</p>
 </footer>
